<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:srcCompat="@mipmap/ic_launcher"
    android:id="@+id/imgTravel"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgTravel"
        android:layout_alignEnd="@+id/imgTravel"
        android:layout_alignRight="@+id/imgTravel"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:text="@string/travel_place"
        android:textAlignment="center"
        android:textColor="#0e11d1"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlace"
        android:layout_alignEnd="@+id/txtPlace"
        android:layout_alignRight="@+id/txtPlace"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:gravity="left"
        android:text="@string/travel_day"
        android:textAlignment="center"
        android:textColor="#ce1309"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlace"
        android:layout_alignEnd="@+id/txtPlace"
        android:layout_alignRight="@+id/txtPlace"
        android:layout_marginLeft="-26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginRight="-11dp"
        android:gravity="right"
        android:text="@string/travel_time"
        android:textAlignment="center"
        android:textColor="#ce1309"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDay"
        android:layout_alignEnd="@+id/txtDay"
        android:layout_alignRight="@+id/txtDay"
        android:layout_marginLeft="-26dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="-63dp"
        android:layout_marginRight="-63dp"
        android:gravity="center"
        android:text="@string/travel_address"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="17sp" />
</RelativeLayout>